flux/cluster/sso-oauth/middleware.yaml
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: sso-strip-prefix
#   namespace: sso
# spec:
#   stripPrefix:
#     prefixes:
#       - /sso
#       - /sso/
#     forceSlash: false

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-auth
  namespace: sso
spec:
  forwardAuth:
    address: http://oauth2-proxy.sso.svc.cluster.local:4180/oauth2/auth
    authResponseHeaders:
      - Authorization
      - X-Forwarded-User
      - X-Forwarded-Email
      - X-Forwarded-Preferred-Username
      - X-Forwarded-Access-Token
    trustForwardHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: error-handler
  namespace: sso
spec:
  errors:
    status:
      - "401"
    service:
      name: oauth2-proxy
      port: 4180
    query: /oauth2/start?rd={url}
