flux/cluster/sso-oauth/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      hostAliases:
        - ip: "192.168.18.59"
          hostnames:
          - "homelab.nobeledgar3.cloud"
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
        args:
        - --http-address=0.0.0.0:4180
        - --provider=keycloak-oidc
        - --email-domain=*
        - --upstream=static://200
        - --oidc-issuer-url=https://homelab.nobeledgar3.cloud/sso/realms/homelab
        - --redirect-url=https://homelab.nobeledgar3.cloud/oauth2/callback
        - --ssl-insecure-skip-verify=true
        - --skip-provider-button=true
        - --pass-access-token=true
        - --pass-authorization-header=true
        - --set-xauthrequest=true
        ports:
        - containerPort: 4180
          name: http
      volumes:
      - name: oauth2-proxy-secret
        secret:
          secretName: keycloak-oauth2-proxy-secret
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: sso
spec:
  ports:
  - port: 4180
    targetPort: http
    name: http
  selector:
    app: oauth2-proxy
